# plugify-plugin-permissions

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  plugify-permissions.json  plugify-permissions.pplugin.in  plugin.cpp
.github/workflows/: cmake-multiple-platform.yml
api/: basic.h  group.h  groupManager.cpp  groupManager.h  group_manager.cpp  node.h  user.h  userManager.cpp  userManager.h  user_manager.cpp  user_manager.h  xxhash.cpp  xxhash.h
src/: basic.h  group.h  group_manager.h  node.h  plugin.cpp  plugin.hpp  timer_system.cpp  timer_system.h  user.h  user_manager.h
src/api/: group_manager.cpp  user_manager.cpp
sym/: exported_symbols.lds  version_script.lds
